# Nakama-Sol-x402

./: .gitignore  .semgrepignore  AUDIT_REPORT.md  Cargo.toml  LICENSE  LICENSE.md  Makefile  NOTICE  README.md  README.ru.md
.github/: CI-POLICY.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci-feature.yml  ci-release.yml  nightly.yml
clients/ts/: LICENSE  package-lock.json  package.json  tsconfig.json
clients/ts/scripts/: 00-full-demo.ts  05-top-up.ts  06-cancel-by-merchant.ts  07-x402-flow.ts  08-resubscribe.ts  09-adr-015-smoke.ts  demo-log.md
clients/ts/src/: accounts.ts  computedStatus.ts  index.ts  pdas.ts  types.ts
clients/ts/src/instructions/: cancel.ts  changeRate.ts  closeSession.ts  openSession.ts  pause.ts  resubscribe.ts  resume.ts  settleUsage.ts  topUp.ts
crates/nakama-client/: Cargo.toml  LICENSE.bsl
crates/nakama-client/src/: accounts.rs  change_rate.rs  computed_status.rs  constants.rs  discriminator.rs  lib.rs  pda.rs  resubscribe.rs
crates/nakama-client/tests/: x402_pay_session_view.rs
crates/nakama-x402-facilitator/: Cargo.toml  LICENSE.bsl  OPENAPI.yaml  README.md
crates/nakama-x402-facilitator/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
crates/nakama-x402-facilitator/src/handlers/: close_session.rs  computed_status.rs  mod.rs  open_session.rs  settle_usage.rs  top_up.rs
crates/nakama-x402-facilitator/tests/: auth_and_caps.rs  f5_decoder_owner_check.rs  top_up_meta_order.rs  x402_session_meta_order.rs
nakama/: Anchor.toml  package.json
nakama/programs/nakama/: Cargo.toml
nakama/programs/nakama/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
nakama/programs/nakama/src/instructions/: cancel.rs  charge.rs  cleanup.rs  close_session.rs  create_plan.rs  open_session.rs  pause.rs  resume.rs  settle_usage.rs  subscribe.rs  top_up.rs
nakama/programs/nakama/tests/: adr005_variable_rate.rs  adr006_cancel_from_paused.rs  adr006_pause_resume.rs  adr006_state_layout.rs  adr015_f4_pause_event.rs  adr015_p1_init_grief.rs  adr015_p2_streaming_invariants.rs  adr015_p5_rate_truncation.rs  adr015_p6_fsm_divergence.rs  adr015_p7_orphan_paysessions.rs  adr015_security_remediation.rs  adr_s3_error_gap_coverage.rs  adr_s3_event_and_rent_pins.rs  adversarial.rs  cancel_by_merchant.rs  cancel_from_grace.rs  cancel_happy_path.rs  cancel_invariants.rs  charge_adversarial.rs  charge_grace_blocks.rs  charge_happy_path.rs  charge_invariants.rs  charge_tail_enters_grace.rs  cleanup_happy_path.rs  cleanup_invariants.rs  create_plan.rs  cu_benchmarks.rs  passive_grace_expiry.rs  resubscribe.rs  state_layout.rs  subscribe_happy_path.rs  subscribe_invariants.rs  test_initialize.rs  top_up_active.rs  top_up_grace.rs  top_up_signer_guards.rs  x402_e2e_flow.rs  x402_open_close_happy_path.rs  x402_open_close_invariants.rs  x402_parent_state_guards.rs  (+4 more)
nakama/programs/nakama/tests/common/: clock.rs  error.rs  ix.rs  mod.rs
