[package]
name = "nakama-x402-facilitator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "axum HTTP harness for ADR-007 demo flows (top-up, computed-status). Conditional on day-8 GO for full x402 layer."

[lib]
path = "src/lib.rs"

[[bin]]
name = "nakama-x402-facilitator"
path = "src/main.rs"

[dependencies]
nakama-client = { path = "../nakama-client" }

# Solana RPC + tx assembly. Aligned with workspace pins.
solana-pubkey = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-transaction = { workspace = true }
solana-hash = { workspace = true }
solana-commitment-config = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }

spl-associated-token-account = { workspace = true }

# HTTP harness.
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

# Errors / observability.
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serde stack.
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }
sha2 = { workspace = true }
