[package]
name = "nakama"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nakama"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
mainnet = []


[dependencies]
# Anchor 1.0.1 (NOT 0.30.x — API breaking changes per CLAUDE.md hardcoded values)
anchor-lang = "1.0.1"
# anchor-spl gives us Token program client + TokenAccount/Mint accounts.
# Required for vault TokenAccount, transfer/close_account CPIs in subscribe/cancel.
# https://docs.rs/anchor-spl/1.0.1/
anchor-spl = "1.0.1"

[dev-dependencies]
# LiteSVM in-process VM (CLAUDE.md: tests are LiteSVM-only).
litesvm = "0.10.0"
# Solana SDK v3 granular crates (per source-of-truth.md).
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-pubkey = "3.0.0"
solana-instruction = "3.0.0"
solana-hash = "3.0.0"
solana-program = "3.0.0"
solana-system-interface = "2.0.0"
solana-account = "3.0.0"
# SPL Token classic (Token-2022 explicitly rejected by program per ADR-014).
spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"
# Borsh for hand-rolled instruction data (we deliberately avoid anchor-client to
# keep the test suite black-box: discriminators come from the IDL, args are
# Borsh-serialised manually).
borsh = "1.5"
bytemuck = "1.18"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
